// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSettings View AddNew renders correctly 1`] = `
<form
  className="container"
  onSubmit={[Function]}
>
  <InputLabel>
    Add New
  </InputLabel>
  <Flex
    direction="vertical"
    gap="x4"
  >
    <InputContainer>
      <InputContent>
        <Input
          disabled={false}
          maxLength={254}
          onChange={[Function]}
          placeholder="Email address"
          type="email"
          value="old@email.value"
        />
      </InputContent>
    </InputContainer>
    <Button
      disabled={false}
      level="secondary"
      size="medium"
    >
      Add
    </Button>
  </Flex>
</form>
`;

exports[`NotificationSettings View AddNew shows adding in progress 1`] = `
<form
  className="container"
  onSubmit={[Function]}
>
  <InputLabel>
    Add New
  </InputLabel>
  <Flex
    direction="vertical"
    gap="x4"
  >
    <InputContainer>
      <InputContent>
        <Input
          disabled={true}
          maxLength={254}
          onChange={[Function]}
          placeholder="Email address"
          type="email"
          value="old@email.value"
        />
      </InputContent>
    </InputContainer>
    <Button
      disabled={true}
      level="secondary"
      size="medium"
    >
      <ProgressSpinner
        size="1.5rem"
      />
         Adding...
    </Button>
  </Flex>
</form>
`;
